Fixes spacing issue on about page.

--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -4,6 +4,12 @@
 	max-width:rem(700);
 	margin:0 auto;
 	padding:0;
+	@media screen and (max-width:rem(740)){
+		padding:0 rem(20);
+	 }
+	 @media screen and (max-width:rem(500)){
+ 		padding:0 rem(15);
+ 	 }
 }
 .about-information {
 	p {
